@@ -1,3 +1,10 @@
+2013-12-24  Brooks Moses  <bmoses@google.com>
+
+	* string/string.h (__CORRECT_ISO_CPP_STRING_H_PROTO): Define for
+	all compilers that claim C++98 compliance, not just GCC.
+	* string/strings.h (__CORRECT_ISO_CPP_STRINGS_H_PROTO):
+	Likewise.
+
 2013-12-24  Maxim Kuvyrkov  <maxim@kugelworks.com>
 
 	* NEWS: Restore accidentally deleted bug-fix entries.
